<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/top_bar">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="34dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icon_back_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/findpwd_titlebar"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bg_color"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:src="@mipmap/logo_icon" />

            <com.aliwh.android.quickyicha.view.ClearEditText
                android:id="@+id/findpwd_phone_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/findpwd_phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:textColorHint="@color/darkGray"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shape_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.aliwh.android.quickyicha.view.ClearEditText
                    android:id="@+id/findpwd_verify_input"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:hint="@string/findpwd_verify_hint"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/darkGray"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingRight="5dp">

                    <Button
                        android:id="@+id/findpwd_getverify_btn"
                        style="?borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:background="@drawable/submit_btn_bg"
                        android:gravity="center"
                        android:text="@string/findpwd_getverify_button"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shape_line" />

            <com.aliwh.android.quickyicha.view.ClearEditText
                android:id="@+id/findpwd_password_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/findpwd_password_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:textColorHint="@color/darkGray"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shape_line" />

            <com.aliwh.android.quickyicha.view.ClearEditText
                android:id="@+id/findpwd_password_last_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/findpwd_password_last_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:textColorHint="@color/darkGray"
                android:textSize="15sp" />

            <Button
                android:id="@+id/findpwd_confirm"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/submit_btn_bg"
                android:text="@string/findpwd_confirm_button"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>